// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createQueryType > creates query input type 1`] = `
"input Base_Query {
  filters: Base_Filters
}"
`;

exports[`createQueryType > creates query input type 2`] = `
"input Base_Query {
  filters: Base_Filters
  sortBy: Base_Query_Sort_Input
}"
`;

exports[`createQueryType > creates query input type 3`] = `
"input Base_Query {
  filters: Base_Filters
  limit: String
}"
`;

exports[`createQueryType > creates query input type 4`] = `
"input Base_Query {
  filters: Base_Filters
  sortBy: Base_Query_Sort_Input
  limit: String
}"
`;
